--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
   <ion-grid fixed> 
     <ion-row>
       <ion-col seze="10">
-        <ion-button (click)= "logout()"
+        <ion-button routerLink="/test"
         color="primary"
         expand="full"
         shape="round"
