--- a/src/app/registro/registro.page.scss
+++ b/src/app/registro/registro.page.scss
@@ -58,5 +58,8 @@ ion-content {
                 text-decoration: none;
             }
         }
+        .yt{
+            font-size: 60%;
+        }
     }
 }
