--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -10,24 +10,23 @@
     <div class="body">
       <ion-list>
         <ion-item>
-          <ion-label position="stacked" > Nombre </ion-label>
-          <ion-input type="text" [(ngModel)]="name" name="name" required="true"></ion-input>
+          <ion-label position="stacked"> Nombre </ion-label>
+          <ion-input type="text" [(ngModel)]="name" name="name" ></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="stacked" > Correo electrónico </ion-label>
-          <ion-input type="text" [(ngModel)]="email" name="email" required="true"></ion-input>
+          <ion-label position="stacked"> Correo electrónico </ion-label>
+          <ion-input type="text" [(ngModel)]="email" name="email" ></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="stacked" > Contraseña </ion-label>
-      <ion-input [(ngModel)]="password" type="password" name="password" required="true"></ion-input>
+          <ion-label position="stacked"> Contraseña </ion-label>
+          <ion-input [(ngModel)]="password" type="password" name="password" ></ion-input>
         </ion-item>
-      
+        <ion-button (click)="OnSubmitRegister()" expand="full" fill="clear" color="dark"  >Registrar </ion-button>
+        <ion-button (click)="OnSubmitRegister()" expand="full" fill="clear" color="dark" routerLink="/login"  class="yt">Ya tengo cuenta </ion-button>
       </ion-list>
-      <div class="footer">
-        <a routerLink="/login">Registrar</a>
-      </div>
-      
+
     </div>
-    
+
+
   </div>
 </ion-content>
